--- a/azimovblog/templates/includes/header.html
+++ b/azimovblog/templates/includes/header.html
@@ -39,8 +39,14 @@
         </ul>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav align-items-end">
-              <a class="nav-link" href="#" style="color: #ffffff">Вход</a>
-              <a class="nav-link" href="#" style="color: #ffffff">Регистрация </a>
+              {% if user.is_authenticated %}
+              <a class="nav-link" href="#" style="color: #ffffff">Профиль</a>
+              <a class="nav-link" href="{% url 'user:logout' %}" style="color: #ffffff">Выход </a>
+              {% else %}
+              <a class="nav-link" href="{% url 'user:login' %}" style="color: #ffffff">Вход</a>
+              <a class="nav-link" href="{% url 'user:signup' %}" style="color: #ffffff">Регистрация </a>
+              {% endif %}
+
             </div>
           </div>
       </div>
