--- a/azimovblog/templates/user/logged_out.html
+++ b/azimovblog/templates/user/logged_out.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-До связи!
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}До свидания!{% endblock %}
+{% block content %}
+<div class="container py-5">
+  <h1>Вы успешно вышли из аккаунта</h1>
+  <p>Ждем вас снова</p>
+
+</div>
+
+{% endblock %}
