--- a/azimovblog/templates/posts/likes.html
+++ b/azimovblog/templates/posts/likes.html
@@ -3,7 +3,7 @@
 {% block title %} AzimovBlog {% endblock %}
 {% block content %}
 <div class="container py5">
-  <h1>Свежие записи</h1>
+  <h1>Новости</h1>
     {% include 'includes/post.html' %}
 </div>
 {% endblock %}
