--- a/azimovblog/templates/posts/news.html
+++ b/azimovblog/templates/posts/news.html
@@ -3,7 +3,9 @@
 {% block title %} AzimovBlog {% endblock %}
 {% block content %}
 <div class="container py5">
-  <h1>Свежие записи</h1>
+  <h1>Новости</h1>
+  {% for posts in obj %}
     {% include 'includes/post.html' %}
+  {% endfor %}
 </div>
 {% endblock %}
