--- a/azimovblog/templates/includes/header.html
+++ b/azimovblog/templates/includes/header.html
@@ -9,10 +9,14 @@
             <a class="nav-link active" aria-current="page" href="#" style="color:#ffffff">Новости</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color:#ffffff">Избранные авторы</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'blog:follows' %}" style="color:#ffffff">Избранные
+              авторы</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="color:#ffffff">Избранное</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'blog:create_post' %}" style="color:#ffffff">Создать пост</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -24,7 +28,8 @@
 
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Спорт</a></li>
-                <li><a class="dropdown-item" href="{% url 'blog:category_detail' 'proramming' %}">Программирование</a></li>
+                <li><a class="dropdown-item" href="{% url 'blog:category_detail' 'proramming' %}">Программирование</a>
+                </li>
                 <li><a class="dropdown-item" href="{% url 'blog:category_detail' 'design' %}">Дизайн</a></li>
                 <li><a class="dropdown-item" href="#">Игры</a></li>
                 <li><a class="dropdown-item" href="{% url 'blog:categories' %}">Все категории</a></li>
@@ -38,17 +43,17 @@
           </form>
         </ul>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav align-items-end">
-              {% if user.is_authenticated %}
-              <a class="nav-link" href="#" style="color: #ffffff">Профиль</a>
-              <a class="nav-link" href="{% url 'user:logout' %}" style="color: #ffffff">Выход </a>
-              {% else %}
-              <a class="nav-link" href="{% url 'user:login' %}" style="color: #ffffff">Вход</a>
-              <a class="nav-link" href="{% url 'user:signup' %}" style="color: #ffffff">Регистрация </a>
-              {% endif %}
+          <div class="navbar-nav align-items-end">
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'blog:profile' user.id %}" style="color: #ffffff">Профиль</a>
+            <a class="nav-link" href="{% url 'user:logout' %}" style="color: #ffffff">Выход </a>
+            {% else %}
+            <a class="nav-link" href="{% url 'user:login' %}" style="color: #ffffff">Вход</a>
+            <a class="nav-link" href="{% url 'user:signup' %}" style="color: #ffffff">Регистрация </a>
+            {% endif %}
 
-            </div>
           </div>
+        </div>
       </div>
     </div>
   </nav>
