--- a/azimovblog/templates/posts/index.html
+++ b/azimovblog/templates/posts/index.html
@@ -5,5 +5,6 @@
 <div class="container py5">
   <h1>Свежие записи</h1>
     {% include 'includes/post.html' %}
+  {% include 'includes/paginator.html' %}
 </div>
 {% endblock %}
