--- a/azimovblog/templates/posts/create_post.html
+++ b/azimovblog/templates/posts/create_post.html
@@ -1,14 +1,37 @@
 {% extends 'base.html' %}
 {% block title %}Создание поста{% endblock %}
 {% block content %}
-<h1>Вход</h1>
+<h1>
+  {% if action == 'create' %}
+  Создание поста
+  {% elif action == 'update' %}
+  Редактирование поста
+  {% endif %}
+</h1>
 <div class="row justify-content-center"
      style="border: 1px solid black; border-radius:12px; padding:15px; margin-bottom:10px">
   {% include 'includes/form_errors.html' %}
+  {% if action == 'delete' %}
+  <h5>Вы действительное хотите удалить пост </h5>
+    </a>
+    {% endif %}
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'includes/form.html' %}
-    <button type="submit">Создать пост</button>
+    <button type="submit" class="btn btn-primary">
+      {% if action == 'create' %}
+      Создать
+      {% elif action == 'update' %}
+      Подтвердить
+      {% else %}
+      Удалить
+      {% endif %}
+    </button>
+    {% if action == 'delete' %}
+    <a href="{% url 'blog:post' object.id %}" class="btn btn-primary" type="button">
+      Отмена
+    </a>
+    {% endif %}
   </form>
 </div>
 {% endblock %}
